added files into folder with my name

--- a/Haseeb_Hassan/Day05_RiscAssembly_Spike/problem_1/Makefile
+++ b/Haseeb_Hassan/Day05_RiscAssembly_Spike/problem_1/Makefile
@@ -22,7 +22,7 @@ run: $(PROG)
 
 # Rule to debug with Spike
 debug: $(PROG)
-	$(SPIKE) -d --log-commits $(PROG)
+	$(SPIKE) -d --log-commits $(PROG) >> "abs_diff.log"
 
 # Clean up
 clean:
